--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ Experienced in both collaborative and individual projects, I bring strong troubl
 <h3 class="text-white font-bold mb-4">Education</h3>
 <div class="mb-4">
 <div class="flex justify-between mb-1">
-<span class="text-slate-300"> Information Technology Software Development</span>
+<span class="text-slate-300">Diploma in Information Technology Software Development</span>
 <span class="text-primary">Nelson Mandela University</span>
 </div>
 <p class="text-sm text-slate-400">Final Year Student</p>
