--- a/index.html
+++ b/index.html
@@ -67,9 +67,16 @@
                     I'm a Software <br>
                     <span class="text-primary">Developer</span>
                 </h1>
-                <p class="text-xl text-slate-300 mb-8 max-w-lg">
-                   Final-year IT student at Nelson Mandela University, specializing in Software Development. Skilled in full-stack development with hands-on experience in C#, ASP.NET Core MVC, SQL Server,HTML5,CSS3 and JavaScript. Passionate about building innovative, user-friendly applications that solve real-world problems, with proven teamwork and project management experience through collaborative projects such as a Ward Management System and Book Store System.
-                </p>
+               <p class="text-xl text-slate-300 mb-8 max-w-lg">
+                  Final-year IT student at Nelson Mandela University, specializing in Software Development. Skilled in full-stack development with hands-on experience in 
+                   <span class="font-semibold text-yellow-400">C#</span>, 
+                    <span class="font-semibold text-yellow-400">ASP.NET Core MVC</span>, 
+                   <span class="font-semibold text-yellow-400">SQL Server</span>, 
+                  <span class="font-semibold text-yellow-400">HTML5</span>, 
+                  <span class="font-semibold text-yellow-400">CSS3</span> and 
+                 <span class="font-semibold text-yellow-400">JavaScript</span>. 
+  Passionate about building innovative, user-friendly applications that solve real-world problems, with proven teamwork and project management experience through collaborative projects such as a Ward Management System and Book Store System.
+</p>
                 <div class="flex flex-col sm:flex-row gap-4">
                     <a href="#portfolio" class="px-8 py-3 bg-primary hover:bg-opacity-90 text-white font-medium !rounded-button whitespace-nowrap transition-all flex items-center justify-center">
                         View My Work
@@ -518,6 +525,7 @@ this.classList.add('bg-primary', 'text-white');
 </script>
 </body>
 </html>
+
 
 
 
