--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                     I'm a Software <br>
                     <span class="text-primary">Developer</span>
                 </h1>
-               <p class="text-xl text-slate-300 mb-8 max-w-lg">
-                  Final-year IT student at Nelson Mandela University, specializing in Software Development. Skilled in full-stack development with hands-on experience in 
-                   <span class="font-semibold text-yellow-400">C#</span>, 
-                    <span class="font-semibold text-yellow-400">ASP.NET Core MVC</span>, 
-                   <span class="font-semibold text-yellow-400">SQL Server</span>, 
-                  <span class="font-semibold text-yellow-400">HTML5</span>, 
-                  <span class="font-semibold text-yellow-400">CSS3</span> and 
-                 <span class="font-semibold text-yellow-400">JavaScript</span>. 
+<p class="text-xl text-slate-300 mb-8 max-w-lg">
+  Final-year IT student at Nelson Mandela University, specializing in Software Development. Skilled in full-stack development with hands-on experience in 
+  <span class="font-semibold text-blue-400">C#</span>, 
+  <span class="font-semibold text-blue-400">ASP.NET Core MVC</span>, 
+  <span class="font-semibold text-blue-400">SQL Server</span>, 
+  <span class="font-semibold text-blue-400">HTML5</span>, 
+  <span class="font-semibold text-blue-400">CSS3</span> and 
+  <span class="font-semibold text-blue-400">JavaScript</span>. 
   Passionate about building innovative, user-friendly applications that solve real-world problems, with proven teamwork and project management experience through collaborative projects such as a Ward Management System and Book Store System.
 </p>
                 <div class="flex flex-col sm:flex-row gap-4">
@@ -525,6 +525,7 @@ this.classList.add('bg-primary', 'text-white');
 </script>
 </body>
 </html>
+
 
 
 
